Fixing some things and adding genders